<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MgsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/heading_will_appear_here"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#181212"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/MgsSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:autofillHints="@string/enter_your_heading"
            android:hint="@string/enter_your_heading"
            android:inputType="none"
            android:textAlignment="center"
            android:textColorHint="#181212"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="100dp"
            android:background="#ffff"
            android:onClick="submitHeading"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/select_your_font"
            android:textColor="#181212"
            android:textSize="23sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/red"
                android:textColor="#181212"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/blue"
                android:textColor="#181212"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>

